# checker

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml  docker-release.yml  release.yml
checker/: __init__.py  __main__.py  main.py
configs/: config.ci.yaml  config.yaml
data/example/: minimal.txt
